# classicWinGuiFailedPrototype

./: .gitignore  CMakeLists.txt  README.md
inc/: frame.h  root.h
src/: frame.c  main.c  root.c
